[gd_scene load_steps=12 format=3 uid="uid://wmhn6frgy8o2"]

[ext_resource type="Script" uid="uid://dot6i0pk1r182" path="res://main_menu.gd" id="1_jix8l"]
[ext_resource type="Texture2D" uid="uid://bjqn44kqeqel" path="res://PNG/ChatGPT Image 15 sept. 2025, 20_43_33.png" id="2_glbon"]
[ext_resource type="Texture2D" uid="uid://cl6a57kw8kdcb" path="res://PNG/ChatGPT Image 15 sept. 2025, 21_21_21.png" id="3_nlkkf"]
[ext_resource type="Texture2D" uid="uid://bwqpvm5hmf3w6" path="res://PNG/ChatGPT Image 15 sept. 2025, 21_22_43.png" id="4_qe12f"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8qtwp"]
texture = ExtResource("2_glbon")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dy7ct"]
texture = ExtResource("3_nlkkf")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_glbon"]
texture = ExtResource("3_nlkkf")
region_rect = Rect2(107.82, 329.974, 1194.56, 379.274)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0o4t1"]
texture = ExtResource("4_qe12f")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jix8l"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0k4wn"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_j5v2v"]
texture = ExtResource("4_qe12f")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jix8l")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_8qtwp")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -342.0
offset_top = -440.0
offset_right = 344.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 14

[node name="new_game" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/focus = SubResource("StyleBoxTexture_dy7ct")
theme_override_styles/hover = SubResource("StyleBoxTexture_glbon")
theme_override_styles/pressed = SubResource("StyleBoxTexture_0o4t1")
theme_override_styles/normal = SubResource("StyleBoxTexture_jix8l")
flat = true

[node name="load_game" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/focus = SubResource("StyleBoxTexture_dy7ct")
theme_override_styles/hover = SubResource("StyleBoxTexture_glbon")
theme_override_styles/pressed = SubResource("StyleBoxTexture_0k4wn")
theme_override_styles/normal = SubResource("StyleBoxTexture_jix8l")
flat = true

[node name="option" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/focus = SubResource("StyleBoxTexture_dy7ct")
theme_override_styles/hover = SubResource("StyleBoxTexture_glbon")
theme_override_styles/pressed = SubResource("StyleBoxTexture_j5v2v")
theme_override_styles/normal = SubResource("StyleBoxTexture_jix8l")
flat = true

[node name="exit" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/focus = SubResource("StyleBoxTexture_dy7ct")
theme_override_styles/hover = SubResource("StyleBoxTexture_glbon")
theme_override_styles/pressed = SubResource("StyleBoxTexture_j5v2v")
theme_override_styles/normal = SubResource("StyleBoxTexture_jix8l")
flat = true

[connection signal="pressed" from="Panel/VBoxContainer/new_game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/load_game" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/option" to="." method="_on_option_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/exit" to="." method="_on_exit_pressed"]
